--- a/Unit 15 - api_data_wrangling_mini_project.ipynb
+++ b/Unit 15 - api_data_wrangling_mini_project.ipynb
@@ -103,7 +103,7 @@
    "source": [
     "# First, import the relevant modules\n",
     "import requests\n",
-    "import json\n"
+    "import json"
    ]
   },
   {
@@ -182,7 +182,7 @@
     "opening_price = []\n",
     "closing_price = []\n",
     "daily_change = []\n",
-    "traded_volume = []\n",
+    "traded_volume = []    # As of Python version 3.7, \n",
     "\n",
     "for data in json_data['dataset_data']['data']:\n",
     "    opening_price.append(data[1])\n",
@@ -211,12 +211,14 @@
    "source": [
     "# There are some None values in opening_price, remove them.\n",
     "new_opening_price = [x for x in opening_price if x != None]\n",
+    "\n",
     "print(f'The highest and lowest opening prices for AFX_X in 2017 were ${max(new_opening_price)} and ${min(new_opening_price)}')\n",
     "print(f'The largest change in any one day based on High and Low price was ${max(daily_change):.2f}')\n",
     "print(f'The largest change between any two days based on Closing Price was ${max(closing_price) - min(closing_price)}')\n",
     "print(f'The average daily trading volume during this year was {sum(traded_volume)/len(traded_volume):.1f}')\n",
     "\n",
-    "# For the median trading volume during the year\n",
+    "# For the median trading volume during the year, the values are already ordered by the date during appending.\n",
+    "# If value counts are even, median would be the average of the middle two values. If counts are odd, median would be the middle one.\n",
     "def median_volume(volume):\n",
     "    size = len(volume)\n",
     "    if size > 0 and size % 2 == 0:\n",
