api_mimi_project comments updated.

--- a/Unit 15 - api_data_wrangling_mini_project.ipynb
+++ b/Unit 15 - api_data_wrangling_mini_project.ipynb
@@ -217,7 +217,7 @@
     "print(f'The largest change between any two days based on Closing Price was ${max(closing_price) - min(closing_price)}')\n",
     "print(f'The average daily trading volume during this year was {sum(traded_volume)/len(traded_volume):.1f}')\n",
     "\n",
-    "# For the median trading volume during the year, the values are already ordered by the date during appending.\n",
+    "# For the median trading volume during the year, checking the json_data and found the values are already ordered by the date during appending.\n",
     "# If value counts are even, median would be the average of the middle two values. If counts are odd, median would be the middle one.\n",
     "def median_volume(volume):\n",
     "    size = len(volume)\n",
