api_mini_project comment updates 2.

--- a/Unit 15 - api_data_wrangling_mini_project.ipynb
+++ b/Unit 15 - api_data_wrangling_mini_project.ipynb
@@ -182,7 +182,7 @@
     "opening_price = []\n",
     "closing_price = []\n",
     "daily_change = []\n",
-    "traded_volume = []    # As of Python version 3.7, \n",
+    "traded_volume = []\n",
     "\n",
     "for data in json_data['dataset_data']['data']:\n",
     "    opening_price.append(data[1])\n",
