--- a/Unit 15 - api_data_wrangling_mini_project.ipynb
+++ b/Unit 15 - api_data_wrangling_mini_project.ipynb
@@ -31,15 +31,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cPai-w4dsziE6N7P43tH\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# get api key from your .env file\n",
     "import os\n",
@@ -48,7 +40,7 @@
     "load_dotenv()\n",
     "API_KEY = os.getenv('NASDAQ_API_KEY')\n",
     "\n",
-    "print(API_KEY)"
+    "# print(API_KEY)"
    ]
   },
   {
