--- a/Unit 19 Case Study - Frequentist Inference A and B/Frequentist Inference Case Study - Part B.ipynb
+++ b/Unit 19 Case Study - Frequentist Inference A and B/Frequentist Inference Case Study - Part B.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "(1338, 8)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
@@ -205,7 +205,7 @@
        "4   32    1  28.880         0       0       1   3866.85520               1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -414,24 +414,38 @@
     "n0 = len(medical[medical['insuranceclaim'] == 0])\n",
     "\n",
     "sp = np.sqrt(((n0-1)*s0**2 + (n1-1)*s1**2)/(n0+n1-2))\n",
-    "t = (x0-x1)/(sp*np.sqrt(1/n0 + 1/n1))\n",
-    "print('Manual t value:', t)\n",
+    "t_val = (x0-x1)/(sp*np.sqrt(1/n0 + 1/n1))\n",
+    "print('Manual t value:', t_val)\n",
     "print('Degrees of freedom:', n0+n1-2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.4612302316205886e-31"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Manual calculate p value on https://www.socscistatistics.com/pvalues/tdistribution.aspx, significance Level 0.05, two tailed.\n",
-    "# Get p-value < 0.00001."
+    "# Get p-value < 0.00001.\n",
+    "\n",
+    "# To calculate with python, for two-tailed\n",
+    "t.sf(np.abs(t_val),df=n0+n1-2)*2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +454,7 @@
        "Ttest_indResult(statistic=-11.893299030876712, pvalue=4.461230231620717e-31)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
